# crewai-test-application

./: README.md  pyproject.toml  report.md
src/crew_test_2/: crew.py  main.py
