[project]
name = "crew_test_2"
version = "0.1.0"
description = "crew_test_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
crew_test_2 = "crew_test_2.main:run"
run_crew = "crew_test_2.main:run"
train = "crew_test_2.main:train"
replay = "crew_test_2.main:replay"
test = "crew_test_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
